@@ -1,5 +1,12 @@
 2001-06-10  Martin Baulig  <baulig@suse.de>
 
+	* bonobo-config-ditem.c (real_set_value): Implemented.
+
+	* bonobo-config-ditem-utils.c (bonobo_config_ditem_encode_any):
+	New function.
+
+2001-06-10  Martin Baulig  <baulig@suse.de>
+
 	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
 	Added all basic types.
 
